# c-webserver

./: CMakeLists.txt
src/: main.c  testing.c
src/webserver/: webserver.c  webserver.h
src/webserver/allocatedstring/: allocatedstring.c  allocatedstring.h
src/webserver/buffer/: buffer.c  buffer.h
src/webserver/clientlist/: clientlist.c  clientlist.h
src/webserver/clientlist/client/: client.c  client.h
src/webserver/handle/: handle.c  handle.h
src/webserver/httptypes/: httptypes.c  httptypes.h
src/webserver/httptypes/headers/: headers.c  headers.h
src/webserver/stringlist/: stringlist.c  stringlist.h
src/webserver/stringslice/: stringslice.c  stringslice.h
src/webserver/utils/: strcmpgood.c  strcmpgood.h  strcmpnocase.c  strcmpnocase.h  strstrwithlength.c  strstrwithlength.h
